--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -1,37 +1,38 @@
-
 name: Deploy AWS Lambda
 
 on:
-    push:
-        branches:
-            - main
-        paths:
-            - 'lambda/'
-jobs:
-   deploy-lambda:
-        runs-on: ubuntu-latest # Sets or specifies the runner
-        steps:
-            - uses: actions/checkout@v2
+  push:
+    branches:
+      - main
+    paths:
+      - 'lambda/**'
 
-            - name: Set Up Python   # Setups our python env
-              uses: actions/setup-python@v2
-              with:
-                    python-version: '3.12'
-            
-            - name: Install Dependencies # Installs any packages
-              run: |
-                    python -m pip install --upgrade pip
-                    pip install -r lambda/requirements.txt -t lambda/
-            
-            - name: Configure AWS Creds  # Sets up our AWS credentials
-              uses: aws-actions/configure-aws-credentials@v1
-              with:
-                    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                    aws-region: us-east-1
-            
-            - name: Deploy Lambda Function # Zips lambda directory and updates lambda function
-              run: |
-                    cd lambda
-                    zip -r lambda.zip .
-                    aws lambda update-function-code --function-name lambda-cicd0 --zip-file fileb://lambda.zip
+jobs:
+  deploy-lambda:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r lambda/requirements.txt -t lambda/
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Deploy Lambda function
+        run: |
+          cd lambda
+          zip -r lambda.zip .
+          aws lambda update-function-code --function-name lambda-cicd0 --zip-file fileb://lambda.zip
